# autograder-cli

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: pypi.yml  python.yml  test.yml
dev/: compile_deps.sh  generate_schema.sh
dev/local_manual_testing/: ag_project.yml  instructor_file.txt
dev_scripts/: compile_deps.sh  generate_schema.sh  install_deps.sh  lint.sh  local_stack.sh  new_roundtrip_test.sh  test.sh
dev_scripts/local_manual_testing/: ag_project.yml  install.sh
src/ag_contrib/: __main__.py  http_client.py  utils.py
src/ag_contrib/config/: init_project.py  load_project.py  models.py  save_project.py  time_processing.py  utils.py
src/autograder_cli/: __main__.py
src/autograder_cli/config/: init_project.py  load_project.py  models.py  save_project.py
src/autograder_cli/config/autograder_io_schema/: schema.yml
test/local_stack/: docker-compose.yml
tests/: new_roundtrip_test.sh
tests/instructor_files/: test_instructor_files.py
tests/local_stack/: docker-compose.yml
tests/roundtrip/: setup_db.py  test_roundtrip.py
tests/roundtrip/deadline_fixed.test/: project.create.expected.yml  project.create.yml  project.update.expected.yml  project.update.yml
tests/roundtrip/deadline_no_cutoff.test/: project.create.expected.yml  project.create.yml  project.update.expected.yml  project.update.yml
tests/roundtrip/deadline_relative.test/: project.create.expected.yml  project.create.yml  project.update.expected.yml  project.update.yml
tests/roundtrip/edit_timezone.test/: project.create.expected.yml  project.create.yml  project.update.expected.yml  project.update.yml
(+33 files in other folders)
